--- a/views/layout.jade
+++ b/views/layout.jade
@@ -4,7 +4,7 @@ html
     title= title
     link(rel='stylesheet', href='/stylesheets/style.css')
     link(rel='stylesheet', href='/stylesheets/fwebconsole.css')
-    script(type="text/javascript", src="http://ajax.googleapis.com/ajax/libs/jquery/1.5/jquery.min.js")
+    script(type="text/javascript", src="/javascripts/jquery-1.9.1.min.js")
     script(type="text/javascript", src="/socket.io/socket.io.js")
     script(type="text/javascript", src="/javascripts/fwebconsole.js")
     
